--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,22 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://sandbox-web-plugins.s3.amazonaws.com/autocapture/autocapture.js"></script>
+    <script src="https://sandbox-web-plugins.s3.amazonaws.com/liveness/js/liveness.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@0.7.18/src/ua-parser.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/6.2.1/adapter.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/siema@1.5.1/dist/siema.min.js"> -->
+    </script>
+    <div id="container"></div>
     <div id="root"></div>
+    <div id="liveness"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
